--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>[ >:D] </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-color:#fdffa1]
+}
+</style>
+</head>
+<body>
+
+<h1>I belive in ranboo and tubbo</h1>
+
+<p>This page has an image as the background!</p>
+
+</body>
+</html>
+
