--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ body {
 </head>
 <body>
 
-<h1>I belive in ranboo and tubbo</h1>
+<h1>enviornment</h1>
 
-<p>This page has an image as the background!</p>
+<p style="font-family: Mostly Mono">We all have heard of climate issues</p>
 
 </body>
 </html>
