--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
 <style>
 body {
-  background-color:#fdffa1]
+  background-color:#90a0db;
+}
+h1 {
+    text-align:center;
+}
+p {
+	border-style: solid;
+	border-radius: 900px;
+	border-color: lightgreen;
+    border-width: 15px;
+  animation: mymove 5s infinite;
+  
+}
+
+@keyframes mymove {
+  50% {border-color: lightblue;}
 }
 </style>
 </head>
 <body>
 
-<h1>enviornment</h1>
+<h1 style="font-family: cursive">Enviornment</h1>
 
-<p style="font-family: Mostly Mono">We all have heard of climate issues</p>
+<p style="font-family: cursive" > We all have heard of climate issues. They melt our polar ice caps, flood cities, and cause natural disasters. </p>
 
 </body>
 </html>
