--- a/index.html
+++ b/index.html
@@ -1,33 +1,73 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <style>
-body {
-  background-color:#90a0db;
+body{background-color: #469156;
 }
-h1 {
-    text-align:center;
+ul { 
+list-style-type: none; 
+margin: 0; 
+padding: 0; 
+overflow: hidden; 
+background-color: #1f4d29; 
+} 
+li { 
+float: left; 
 }
-p {
-	border-style: solid;
-	border-radius: 900px;
-	border-color: lightgreen;
-    border-width: 15px;
-  animation: mymove 5s infinite;
-  
+li a { 
+display: block; 
+color: white; 
+text-align: center; 
+padding: 14px 16px; 
+text-decoration: none; 
 }
-
-@keyframes mymove {
-  50% {border-color: lightblue;}
+li a:hover:not(.active) { 
+background-color: #1f4d29; 
+}
+.active { background-color: #7fad89; 
 }
 </style>
 </head>
+
+
+
 <body>
 
-<h1 style="font-family: cursive">Enviornment</h1>
+<h1 style="font-family:'Courier New'">Tree Trouble</h1>
 
-<p style="font-family: cursive" > We all have heard of climate issues. They melt our polar ice caps, flood cities, and cause natural disasters. </p>
+<hr>
 
+<ul> 
+<li><a class="active" href="#home">Home</a></li> 
+<li><a href="causes.html">Causes</a></li>
+<li><a href="#effects">Effects</a></li>
+<li><a href="#how to help">How to Help</a></li> 
+</ul> 
+
+<h3 style="font-family:'Courier New'"> Trees, an essensial key to many living things survial, are being cut down at an alarming rate</h3>
+<hr>
+<h4>Description</h4>
+<html>
+<body>
+<p id = "demo"></p>
+<button type = "button" onclick="document.getElementById('demo').innerHTML='Scrub'">Habitat</button>
+<p id = "demo1"></p>
+<button type = "button" onclick="document.getElementById('demo1').innerHTML='Arthropods and Acorns (main diet)'">Diet</button>
+<p id = "demo2"></p>
+<button type = "button" onclick="document.getElementById('demo2').innerHTML=' Did you know that some trees had been to the moon? NASA and the US Forest Service wanted to see if the moon’s orbit caused the seeds to grow differently back on earth. These trees were given to state forestry services in 1975 and 1976. That means there are trees growing on this earth that have been to the moon!'">Fun Fact!</button>
+<p id = "demo3"></p>
+<button type = "button" onclick="document.getElementById('demo3').innerHTML='No; it rarely leaves the Scrub'"><a href="url">https://www.ecosia.org/?c=en</a></button>
 </body>
 </html>
+<hr>
+<img src="insert link here" alt="" width="200">
+<img src="insert link here" alt="" width="200"> 
+<h3 style="font-family:'Courier New'">Why are trees so important?</h3>
+<h4 style="font-family:'Courier New'">humans cut down approximately 15 billion trees a year and re-plant about 5 billion. That's a loss of 10 billion trees every year, and a rate that would mean the loss of all trees within the next 300 years. That number doesn't even include the trees that die naturally.It also estimates that 46% of the world's trees have been cleared over the past 12,000 years. After calculating that number from the total amount of trees on the planet, humans have chopped down about 13984000000 trees. </h4>
+
+<hr>
+
+<h3 style="font-family:'Courier New'">Why is it such a big problem?</h3>
+<h4 style="font-family:'Courier New'"> The lumber industry has grown due to an increase in demand from construction and home remodeling, both of which use lumber heavily. Industry revenue has grown at an annualized rate of $135.4 billion over the span of five years.And since 2020, the softwood industry has supported more than 775,000 jobs. Our economy relies heavily on lumber to function. If the lumber economy crashed, the world would be in a state of crisis.</h3>
 
