--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ background-color: #1f4d29;
 
 <ul> 
 <li><a class="active" href="#home">Home</a></li> 
-<li><a href="causes.html">Causes</a></li>
-<li><a href="#effects">Effects</a></li>
+<li><a href="causes.html">Enviornmental impact</a></li>
 <li><a href="#how to help">How to Help</a></li> 
 </ul> 
 
@@ -51,9 +50,9 @@ background-color: #1f4d29;
 <html>
 <body>
 <p id = "demo"></p>
-<button type = "button" onclick="document.getElementById('demo').innerHTML='Scrub'">Habitat</button>
+<button type = "button" onclick="document.getElementById('demo').innerHTML='Scrub'">Enviornment helper!</button>
 <p id = "demo1"></p>
-<button type = "button" onclick="document.getElementById('demo1').innerHTML='Arthropods and Acorns (main diet)'">Diet</button>
+<button type = "button" onclick="document.getElementById('demo1').innerHTML='Arthropods and Acorns (main diet)'">Planting</button>
 <p id = "demo2"></p>
 <button type = "button" onclick="document.getElementById('demo2').innerHTML=' Did you know that some trees had been to the moon? NASA and the US Forest Service wanted to see if the moon’s orbit caused the seeds to grow differently back on earth. These trees were given to state forestry services in 1975 and 1976. That means there are trees growing on this earth that have been to the moon!'">Fun Fact!</button>
 <p id = "demo3"></p>
