--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ background-color: #1f4d29;
 
 <h3 style="font-family:'Courier New'"> Trees, an essensial key to many living things survial, are being cut down at an alarming rate</h3>
 <hr>
-<h4>Description</h4>
+<h4></h4>
 <html>
 <body>
 <p id = "demo"></p>
-<button type = "button" onclick="document.getElementById('demo').innerHTML='Scrub'">Enviornment helper!</button>
+<button type = "button" onclick="document.getElementById('demo').innerHTML='just by doing simple things like recycling paper, you could save thousands of trees over your lifetime!'">Enviornment helper!</button>
 <p id = "demo1"></p>
-<button type = "button" onclick="document.getElementById('demo1').innerHTML='Arthropods and Acorns (main diet)'">Planting</button>
+<button type = "button" onclick="document.getElementById('demo1').innerHTML='For every 3 trees cut down, one new one is planted!'">Planting</button>
 <p id = "demo2"></p>
 <button type = "button" onclick="document.getElementById('demo2').innerHTML=' Did you know that some trees had been to the moon? NASA and the US Forest Service wanted to see if the moon’s orbit caused the seeds to grow differently back on earth. These trees were given to state forestry services in 1975 and 1976. That means there are trees growing on this earth that have been to the moon!'">Fun Fact!</button>
 <p id = "demo3"></p>
