--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ background-color: #1f4d29;
 <hr>
 
 <ul> 
-<li><a class="active" href="#home">Home</a></li> 
-<li><a href="causes.html">Enviornmental impact</a></li>
-<li><a href="#how to help">How to Help</a></li> 
+<li><a class="active" href="#home">Trees!</a></li> 
+<li><a href="causes.html">Enviornmental issues</a></li>
+<li><a href="#how to help">How to help!</a></li> 
 </ul> 
 
 <h3 style="font-family:'Courier New'"> Trees, an essensial key to many living things survial, are being cut down at an alarming rate</h3>
